--- a/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
+++ b/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="src\FPSCounter.h" />
     <ClInclude Include="src\GlfwManager.h" />
     <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Texture.h" />
     <ClInclude Include="src\Timer.h" />
     <ClInclude Include="src\VulkanDescriptor.h" />
@@ -107,6 +108,7 @@
     <ClCompile Include="src\FPSCounter.cpp" />
     <ClCompile Include="src\GlfwManager.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\Timer.cpp" />
     <ClCompile Include="src\VulkanDescriptor.cpp" />
