--- a/VulkanTestGame/imgui.ini
+++ b/VulkanTestGame/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=632,30
 Size=550,680
-Collapsed=1
+Collapsed=0
 
 [Window][Setting Window]
 Pos=9,26
@@ -14,7 +14,52 @@ Size=325,291
 Collapsed=0
 
 [Window][Stat]
-Pos=1013,29
+Pos=1457,34
 Size=128,65
+Collapsed=0
+
+[Window][Hierarchy Window]
+Pos=220,130
+Size=481,320
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Style Editor]
+Pos=623,32
+Size=708,841
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=56,56
+Size=496,541
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=57,59
+Size=621,841
 Collapsed=0
 
