--- a/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj.filters
+++ b/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Fichiers sources\Vulkan">
       <UniqueIdentifier>{737544a9-cd5e-40ba-a739-d4f2b46a7de8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Fichiers d%27en-tête\Scene">
+      <UniqueIdentifier>{8d3cc118-6105-4c26-ad98-4402ee57b112}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\Scene">
+      <UniqueIdentifier>{92d465f7-598c-4371-af29-a8f7ef32bedc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Timer.h">
@@ -72,9 +78,6 @@
     <ClInclude Include="src\ImguiStuff.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="src\Scene.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
     <ClInclude Include="src\VulkanSwapChain.h">
       <Filter>Fichiers d%27en-tête\Vulkan</Filter>
     </ClInclude>
@@ -110,6 +113,21 @@
     </ClInclude>
     <ClInclude Include="src\Log.h">
       <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Scene.h">
+      <Filter>Fichiers d%27en-tête\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SceneObject.h">
+      <Filter>Fichiers d%27en-tête\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Transform.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SceneObjectReference.h">
+      <Filter>Fichiers d%27en-tête\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Imgui\imgui_stdlib.h">
+      <Filter>Fichiers d%27en-tête\Imgui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -152,9 +170,6 @@
     <ClCompile Include="src\Imgui\imgui_demo.cpp">
       <Filter>Fichiers sources\Imgui</Filter>
     </ClCompile>
-    <ClCompile Include="src\Scene.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
     <ClCompile Include="src\VulkanDescriptor.cpp">
       <Filter>Fichiers sources\Vulkan</Filter>
     </ClCompile>
@@ -190,6 +205,21 @@
     </ClCompile>
     <ClCompile Include="src\Log.cpp">
       <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Scene.cpp">
+      <Filter>Fichiers sources\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SceneObject.cpp">
+      <Filter>Fichiers sources\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Transform.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SceneObjectReference.cpp">
+      <Filter>Fichiers sources\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Imgui\imgui_stdlib.cpp">
+      <Filter>Fichiers sources\Imgui</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
