--- a/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
+++ b/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\SceneModel.h" />
     <ClInclude Include="src\SceneObject.h" />
     <ClInclude Include="src\SceneObjectReference.h" />
     <ClInclude Include="src\Texture.h" />
@@ -134,6 +135,7 @@
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Scene.cpp" />
+    <ClCompile Include="src\SceneModel.cpp" />
     <ClCompile Include="src\SceneObject.cpp" />
     <ClCompile Include="src\SceneObjectReference.cpp" />
     <ClCompile Include="src\Texture.cpp" />
