--- a/VulkanTestGame/imgui.ini
+++ b/VulkanTestGame/imgui.ini
@@ -19,8 +19,8 @@ Size=128,65
 Collapsed=0
 
 [Window][Hierarchy Window]
-Pos=99,99
-Size=448,516
+Pos=28,98
+Size=403,516
 Collapsed=0
 
 [Window][Example: Long text display]
@@ -61,5 +61,10 @@ Collapsed=0
 [Window][Example: Documents]
 Pos=57,59
 Size=621,841
+Collapsed=0
+
+[Window][Asset manager]
+Pos=766,92
+Size=600,300
 Collapsed=0
 
