--- a/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
+++ b/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
@@ -86,6 +86,8 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Asset.h" />
+    <ClInclude Include="src\AssetManager.h" />
     <ClInclude Include="src\FPSCounter.h" />
     <ClInclude Include="src\GlfwManager.h" />
     <ClInclude Include="src\ImguiStuff.h" />
@@ -100,6 +102,7 @@
     <ClInclude Include="src\Imgui\imstb_truetype.h" />
     <ClInclude Include="src\Log.h" />
     <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\MeshAsset.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Scene.h" />
     <ClInclude Include="src\SceneModel.h" />
@@ -121,6 +124,8 @@
     <ClInclude Include="src\VulkanSwapChain.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Asset.cpp" />
+    <ClCompile Include="src\AssetManager.cpp" />
     <ClCompile Include="src\FPSCounter.cpp" />
     <ClCompile Include="src\GlfwManager.cpp" />
     <ClCompile Include="src\ImguiStuff.cpp" />
@@ -133,6 +138,7 @@
     <ClCompile Include="src\Imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\Log.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\MeshAsset.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\SceneModel.cpp" />
