--- a/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
+++ b/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
@@ -72,7 +72,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.1.108.0\Include;$(SolutionDir)Libraries\glfw-3.3.bin.WIN64\include;$(SolutionDir)Libraries\glm;$(SolutionDir)Libraries\SingleFile;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.1.108.0\Include;$(SolutionDir)Libraries\glfw-3.3.bin.WIN64\include;$(SolutionDir)Libraries\glm;$(SolutionDir)Libraries\SingleFile;$(ProjectDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -91,7 +91,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PreprocessorDefinitions>DEBUG;CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.1.108.0\Include;$(SolutionDir)Libraries\glfw-3.3.bin.WIN64\include;$(SolutionDir)Libraries\glm;$(SolutionDir)Libraries\SingleFile;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.1.108.0\Include;$(SolutionDir)Libraries\glfw-3.3.bin.WIN64\include;$(SolutionDir)Libraries\glm;$(SolutionDir)Libraries\SingleFile;$(ProjectDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -112,7 +112,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PreprocessorDefinitions>RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.1.108.0\Include;$(SolutionDir)Libraries\glfw-3.3.bin.WIN64\include;$(SolutionDir)Libraries\glm;$(SolutionDir)Libraries\SingleFile;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.1.108.0\Include;$(SolutionDir)Libraries\glfw-3.3.bin.WIN64\include;$(SolutionDir)Libraries\glm;$(SolutionDir)Libraries\SingleFile;$(ProjectDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -126,11 +126,11 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Asset.h" />
-    <ClInclude Include="src\AssetManager.h" />
-    <ClInclude Include="src\FPSCounter.h" />
-    <ClInclude Include="src\GlfwManager.h" />
-    <ClInclude Include="src\ImguiStuff.h" />
+    <ClInclude Include="src\Asset\Asset.h" />
+    <ClInclude Include="src\Asset\AssetManager.h" />
+    <ClInclude Include="src\Helper\FPSCounter.h" />
+    <ClInclude Include="src\Rendering\GlfwManager.h" />
+    <ClInclude Include="src\Game\ImguiStuff.h" />
     <ClInclude Include="src\Imgui\imconfig.h" />
     <ClInclude Include="src\Imgui\imgui.h" />
     <ClInclude Include="src\Imgui\imgui_impl_glfw.h" />
@@ -140,36 +140,36 @@
     <ClInclude Include="src\Imgui\imstb_rectpack.h" />
     <ClInclude Include="src\Imgui\imstb_textedit.h" />
     <ClInclude Include="src\Imgui\imstb_truetype.h" />
-    <ClInclude Include="src\Log.h" />
-    <ClInclude Include="src\Mesh.h" />
-    <ClInclude Include="src\MeshAsset.h" />
-    <ClInclude Include="src\Model.h" />
-    <ClInclude Include="src\Scene.h" />
-    <ClInclude Include="src\SceneModel.h" />
-    <ClInclude Include="src\SceneObject.h" />
-    <ClInclude Include="src\SceneObjectReference.h" />
-    <ClInclude Include="src\Setting.h" />
-    <ClInclude Include="src\Texture.h" />
-    <ClInclude Include="src\Timer.h" />
-    <ClInclude Include="src\Transform.h" />
-    <ClInclude Include="src\VulkanDescriptor.h" />
-    <ClInclude Include="src\VulkanPhysicalDevice.h" />
-    <ClInclude Include="src\VulkanHelper.h" />
-    <ClInclude Include="src\VulkanInstance.h" />
-    <ClInclude Include="src\VulkanLayoutBinding.h" />
-    <ClInclude Include="src\VulkanLogicalDevice.h" />
-    <ClInclude Include="src\VulkanManager.h" />
-    <ClInclude Include="src\VulkanRenderPass.h" />
-    <ClInclude Include="src\VulkanGraphicPipeline.h" />
-    <ClInclude Include="src\VulkanShader.h" />
-    <ClInclude Include="src\VulkanSwapChain.h" />
+    <ClInclude Include="src\Helper\Log.h" />
+    <ClInclude Include="src\Rendering\Mesh.h" />
+    <ClInclude Include="src\Asset\MeshAsset.h" />
+    <ClInclude Include="src\Rendering\Model.h" />
+    <ClInclude Include="src\Scene\Scene.h" />
+    <ClInclude Include="src\Scene\SceneModel.h" />
+    <ClInclude Include="src\Scene\SceneObject.h" />
+    <ClInclude Include="src\Scene\SceneObjectReference.h" />
+    <ClInclude Include="src\Game\Setting.h" />
+    <ClInclude Include="src\Rendering\Texture.h" />
+    <ClInclude Include="src\Helper\Timer.h" />
+    <ClInclude Include="src\Game\Transform.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanDescriptor.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanPhysicalDevice.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanHelper.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanInstance.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanLayoutBinding.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanLogicalDevice.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanManager.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanRenderPass.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanGraphicPipeline.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanShader.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanSwapChain.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Asset.cpp" />
-    <ClCompile Include="src\AssetManager.cpp" />
-    <ClCompile Include="src\FPSCounter.cpp" />
-    <ClCompile Include="src\GlfwManager.cpp" />
-    <ClCompile Include="src\ImguiStuff.cpp" />
+    <ClCompile Include="src\Asset\Asset.cpp" />
+    <ClCompile Include="src\Asset\AssetManager.cpp" />
+    <ClCompile Include="src\Helper\FPSCounter.cpp" />
+    <ClCompile Include="src\Rendering\GlfwManager.cpp" />
+    <ClCompile Include="src\Game\ImguiStuff.cpp" />
     <ClCompile Include="src\Imgui\imgui.cpp" />
     <ClCompile Include="src\Imgui\imgui_demo.cpp" />
     <ClCompile Include="src\Imgui\imgui_draw.cpp" />
@@ -177,29 +177,29 @@
     <ClCompile Include="src\Imgui\imgui_impl_vulkan.cpp" />
     <ClCompile Include="src\Imgui\imgui_stdlib.cpp" />
     <ClCompile Include="src\Imgui\imgui_widgets.cpp" />
-    <ClCompile Include="src\Log.cpp" />
-    <ClCompile Include="src\Mesh.cpp" />
-    <ClCompile Include="src\MeshAsset.cpp" />
-    <ClCompile Include="src\Model.cpp" />
-    <ClCompile Include="src\Scene.cpp" />
-    <ClCompile Include="src\SceneModel.cpp" />
-    <ClCompile Include="src\SceneObject.cpp" />
-    <ClCompile Include="src\SceneObjectReference.cpp" />
-    <ClCompile Include="src\Setting.cpp" />
-    <ClCompile Include="src\Texture.cpp" />
-    <ClCompile Include="src\Timer.cpp" />
-    <ClCompile Include="src\Transform.cpp" />
-    <ClCompile Include="src\VulkanDescriptor.cpp" />
-    <ClCompile Include="src\VulkanPhysicalDevice.cpp" />
-    <ClCompile Include="src\VulkanHelper.cpp" />
-    <ClCompile Include="src\VulkanInstance.cpp" />
-    <ClCompile Include="src\VulkanLayoutBinding.cpp" />
-    <ClCompile Include="src\VulkanLogicalDevice.cpp" />
-    <ClCompile Include="src\VulkanManager.cpp" />
-    <ClCompile Include="src\VulkanRenderPass.cpp" />
-    <ClCompile Include="src\VulkanGraphicPipeline.cpp" />
-    <ClCompile Include="src\VulkanShader.cpp" />
-    <ClCompile Include="src\VulkanSwapChain.cpp" />
+    <ClCompile Include="src\Helper\Log.cpp" />
+    <ClCompile Include="src\Rendering\Mesh.cpp" />
+    <ClCompile Include="src\Asset\MeshAsset.cpp" />
+    <ClCompile Include="src\Rendering\Model.cpp" />
+    <ClCompile Include="src\Scene\Scene.cpp" />
+    <ClCompile Include="src\Scene\SceneModel.cpp" />
+    <ClCompile Include="src\Scene\SceneObject.cpp" />
+    <ClCompile Include="src\Scene\SceneObjectReference.cpp" />
+    <ClCompile Include="src\Game\Setting.cpp" />
+    <ClCompile Include="src\Rendering\Texture.cpp" />
+    <ClCompile Include="src\Helper\Timer.cpp" />
+    <ClCompile Include="src\Game\Transform.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanDescriptor.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanPhysicalDevice.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanHelper.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanInstance.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanLayoutBinding.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanLogicalDevice.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanManager.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanRenderPass.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanGraphicPipeline.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanShader.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanSwapChain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
