--- a/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
+++ b/VulkanRenderingEngine/VulkanRenderingEngine.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClInclude Include="src\Asset\Asset.h" />
     <ClInclude Include="src\Asset\AssetManager.h" />
+    <ClInclude Include="src\BaseRenderer.h" />
     <ClInclude Include="src\Helper\FPSCounter.h" />
     <ClInclude Include="src\Rendering\GlfwManager.h" />
     <ClInclude Include="src\Game\ImguiStuff.h" />
@@ -158,7 +159,7 @@
     <ClInclude Include="src\Rendering\Vulkan\VulkanInstance.h" />
     <ClInclude Include="src\Rendering\Vulkan\VulkanLayoutBinding.h" />
     <ClInclude Include="src\Rendering\Vulkan\VulkanLogicalDevice.h" />
-    <ClInclude Include="src\Rendering\Vulkan\VulkanManager.h" />
+    <ClInclude Include="src\Rendering\Vulkan\VulkanRenderer.h" />
     <ClInclude Include="src\Rendering\Vulkan\VulkanRenderPass.h" />
     <ClInclude Include="src\Rendering\Vulkan\VulkanGraphicPipeline.h" />
     <ClInclude Include="src\Rendering\Vulkan\VulkanShader.h" />
@@ -167,6 +168,7 @@
   <ItemGroup>
     <ClCompile Include="src\Asset\Asset.cpp" />
     <ClCompile Include="src\Asset\AssetManager.cpp" />
+    <ClCompile Include="src\BaseRenderer.cpp" />
     <ClCompile Include="src\Helper\FPSCounter.cpp" />
     <ClCompile Include="src\Rendering\GlfwManager.cpp" />
     <ClCompile Include="src\Game\ImguiStuff.cpp" />
@@ -195,7 +197,7 @@
     <ClCompile Include="src\Rendering\Vulkan\VulkanInstance.cpp" />
     <ClCompile Include="src\Rendering\Vulkan\VulkanLayoutBinding.cpp" />
     <ClCompile Include="src\Rendering\Vulkan\VulkanLogicalDevice.cpp" />
-    <ClCompile Include="src\Rendering\Vulkan\VulkanManager.cpp" />
+    <ClCompile Include="src\Rendering\Vulkan\VulkanRenderer.cpp" />
     <ClCompile Include="src\Rendering\Vulkan\VulkanRenderPass.cpp" />
     <ClCompile Include="src\Rendering\Vulkan\VulkanGraphicPipeline.cpp" />
     <ClCompile Include="src\Rendering\Vulkan\VulkanShader.cpp" />
